@@ -14,6 +14,8 @@
       <path value="$PROJECT_DIR$/../../master/joomla4" />
       <path value="$USER_HOME$/Sites/boot4/configuration.php" />
       <path value="/var/www/boot4/configuration.php" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/kornrunner/blurhash" />
+      <path value="$PROJECT_DIR$/component/backend/vendor/composer" />
     </include_path>
   </component>
   <component name="PhpProjectSharedConfiguration" php_language_level="8.0" />
