@@ -1,3 +1,7 @@
+Fediverse Tools for Joomla, version 2.0.1
+================================================================================
+# [HIGH] Typo in module causes it to display nothing (gh-10)
+
 Fediverse Tools for Joomla, version 2.0.0
 ================================================================================
 + ActivityPub and WebFinger: make your Joomla site part of the Fediverse
